--- a/platformio.ini
+++ b/platformio.ini
@@ -42,17 +42,28 @@ lib_deps_8266 =
 [env:default]
 platform = espressif32@6.7.0
 build_flags = ${env.build_flags}
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Switch","io-pin01":"5","io-typ02":"Switch","io-pin02":"13","io-typ03":"Dimmer","io-pin03":"14","io-typ04":"Dimmer","io-pin04":"15"}'
 
 [env:default-c3]
 platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Switch","io-pin01":"7","io-typ02":"Switch","io-pin02":"8","io-typ03":"Dimmer","io-pin03":"9","io-typ04":"Dimmer","io-pin04":"10"}'
+
+[env:default-s2-mini]
+platform = espressif32@6.7.0
+board = lolin_s2_mini
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D BOARD_HAS_PSRAM
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","io-typ01":"Switch","io-pin01":"7","io-typ02":"Switch","io-pin02":"8","io-typ03":"Dimmer","io-pin03":"9","io-typ04":"Dimmer","io-pin04":"10"}'
+lib_ignore =
+    ESP32_BleSerial
 
 [env:default-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","io-typ01":"Switch","io-pin01":"14","io-typ02":"Switch","io-pin02":"27","io-typ03":"Switch","io-pin03":"27","io-typ04":"Switch","io-pin04":"27"}'
 lib_deps = ${env.lib_deps_8266}
     ${env.lib_deps}
 lib_ignore =
@@ -63,7 +74,7 @@ lib_ignore =
 [env:sonoff-dualr3]
 platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK
-              -D DEFAULT_CONFIG='{"sys_bt_pin":"0","sys_sl_pin":"13","io-typ01":"Switch","io-pin01":"14","io-typ02":"Switch","io-pin02":"27"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"13","io-typ01":"Switch","io-pin01":"14","io-typ02":"Switch","io-pin02":"27","io-typ03":"Switch","io-pin03":"27","io-typ04":"Switch","io-pin04":"27"}'
 
 
 #------------------[ Examples ]------------------
@@ -72,7 +83,7 @@ build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERT
 [env:smart-sensor]
 platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
-              -D DEFAULT_CONFIG='{"io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
     RobTillaart/DHTNew@0.4.19
@@ -85,7 +96,7 @@ platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-              -D DEFAULT_CONFIG='{"io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
            RobTillaart/DHTNew@0.4.19
@@ -93,11 +104,24 @@ lib_deps = ${env.lib_deps}
 lib_ignore =
     LovyanGFX
 
+[env:smart-sensor-s2-mini]
+platform = espressif32@6.7.0
+board = lolin_s2_mini
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D DISABLE_UI -D BOARD_HAS_PSRAM
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+lib_deps = ${env.lib_deps}
+           RobTillaart/DHTNew@0.4.19
+           OneWire@2.3.8
+lib_ignore =
+    ESP32_BleSerial
+    LovyanGFX
+
 [env:smart-sensor-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
-              -D DEFAULT_CONFIG='{"sys_bt_pin":"2","sys_sl_pin":"16","soth-typ":"ds18b20","soth-pin":"0","ligh-typ":"ldr","ligh-pin":"17"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","sys_bt_pin":"2","sys_sl_pin":"16","soth-typ":"ds18b20","soth-pin":"0","ligh-typ":"ldr","ligh-pin":"17"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps_8266}
     ${env:smart-sensor.lib_deps}
@@ -109,7 +133,7 @@ lib_ignore =
 [env:smart-sensor-display]
 platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_AUTOMATION
-              -D DEFAULT_CONFIG='{"io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
 board_build.partitions = ./src/partitions.csv
 lib_deps = ${env:smart-sensor.lib_deps}
@@ -117,8 +141,8 @@ lib_deps = ${env:smart-sensor.lib_deps}
 [env:smart-sensor-display-s3]
 platform = espressif32@6.7.0
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -DESP32S3_DEV -DBOARD_HAS_PSRAM
-              -D DEFAULT_CONFIG='{"io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D ESP32S3_DEV -D BOARD_HAS_PSRAM
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
@@ -235,6 +259,7 @@ platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
 lib_deps = ${env.lib_deps_8266}
     ${env.lib_deps}
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
@@ -249,8 +274,20 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+
+[env:color-light-s2-mini]
+platform = espressif32@6.7.0
+board = lolin_s2_mini
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D BOARD_HAS_PSRAM
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+lib_deps = ${env.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_ignore =
+    ESP32_BleSerial
 
 
 [env:shutter]
