--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ include_dir = ./src
 data_dir = ./data/web
 
 [env]
+platform = espressif32@6.8.1
 build_src_filter = -<*> +<src/*>
 build_flags = -D CRON_USE_LOCAL_TIME -D CRON_DISABLE_YEARS -Os -D BUILD_ENV_NAME=\"$PIOENV\"
 build_unflags = -fno-exceptions
@@ -40,19 +41,16 @@ lib_deps_8266 =
 
 
 [env:default]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags}
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Switch","io-pin01":"5","io-typ02":"Switch","io-pin02":"13","io-typ03":"Dimmer","io-pin03":"14","io-typ04":"Dimmer","io-pin04":"15"}'
 
 [env:default-c3]
-platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Switch","io-pin01":"7","io-typ02":"Switch","io-pin02":"8","io-typ03":"Dimmer","io-pin03":"9","io-typ04":"Dimmer","io-pin04":"10"}'
 
 [env:default-s2-mini]
-platform = espressif32@6.7.0
 board = lolin_s2_mini
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","io-typ01":"Switch","io-pin01":"7","io-typ02":"Switch","io-pin02":"8","io-typ03":"Dimmer","io-pin03":"9","io-typ04":"Dimmer","io-pin04":"10"}'
@@ -72,7 +70,6 @@ lib_ignore =
     LovyanGFX
 
 [env:sonoff-dualr3]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"13","io-typ01":"Switch","io-pin01":"14","io-typ02":"Switch","io-pin02":"27","io-typ03":"Switch","io-pin03":"27","io-typ04":"Switch","io-pin04":"27"}'
 
@@ -81,7 +78,6 @@ build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERT
 
 
 [env:smart-sensor]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
@@ -92,11 +88,10 @@ lib_ignore =
     LovyanGFX
 
 [env:smart-sensor-c3]
-platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
            RobTillaart/DHTNew@0.4.19
@@ -105,7 +100,6 @@ lib_ignore =
     LovyanGFX
 
 [env:smart-sensor-s2-mini]
-platform = espressif32@6.7.0
 board = lolin_s2_mini
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D DISABLE_UI -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
@@ -131,7 +125,6 @@ lib_ignore =
     LovyanGFX
 
 [env:smart-sensor-display]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_AUTOMATION
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
@@ -139,9 +132,9 @@ board_build.partitions = ./src/partitions.csv
 lib_deps = ${env:smart-sensor.lib_deps}
 
 [env:smart-sensor-display-s3]
-platform = espressif32@6.7.0
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D ESP32S3_DEV -D BOARD_HAS_PSRAM
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK
+              -D ESP32S3_DEV -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
 board_build.mcu = esp32s3
@@ -155,15 +148,14 @@ lib_deps = ${env:smart-sensor.lib_deps}
 
 
 [env:x10-transceiver]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 
 [env:x10-transceiver-c3]
-platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
+              -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 lib_ignore =
     LovyanGFX
@@ -181,7 +173,6 @@ lib_ignore =
     LovyanGFX
 
 [env:rf-transceiver]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
 lib_deps = ${env.lib_deps}
@@ -201,10 +192,10 @@ lib_ignore =
     LovyanGFX
 
 [env:rf-transceiver-c3]
-platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
+              -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
 lib_deps = ${env.lib_deps}
     rc-switch@2.6.4
@@ -213,7 +204,6 @@ lib_ignore =
 
 
 [env:ir-transceiver]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
 lib_deps = ${env.lib_deps}
@@ -235,10 +225,10 @@ lib_ignore =
     LovyanGFX
 
 [env:ir-transceiver-c3]
-platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
+              -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
 lib_deps = ${env.lib_deps}
            crankyoldgit/IRremoteESP8266@2.8.6
@@ -248,7 +238,6 @@ lib_ignore =
 
 
 [env:color-light]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
@@ -258,8 +247,8 @@ lib_deps = ${env.lib_deps}
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
 lib_deps = ${env.lib_deps_8266}
     ${env.lib_deps}
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
@@ -269,19 +258,31 @@ lib_ignore =
     LovyanGFX
 
 [env:color-light-c3]
-platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
+              -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","leds-typ":"6","leds-cnt":"25","leds-spd":"0","leds-pin":"8"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","leds-typ":"6","leds-cnt":"25","leds-spd":"0","leds-pin":"8"}'
+lib_deps = ${env.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+
+[env:color-light-s3]
+board = esp32-s3-fh4r2
+#board = esp32-s3-devkitc-1
+#board = esp32-s3-devkitm-1
+#board = lolin_s3_mini
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
+              -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","leds-typ":"6","leds-cnt":"144","leds-spd":"0","leds-pin":"6"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 [env:color-light-s2-mini]
-platform = espressif32@6.7.0
 board = lolin_s2_mini
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D BOARD_HAS_PSRAM
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2
+              -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
@@ -291,7 +292,6 @@ lib_ignore =
 
 
 [env:shutter]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
 lib_deps = ${env.lib_deps}
@@ -299,7 +299,6 @@ lib_deps = ${env.lib_deps}
     madhephaestus/ESP32Servo@^1.1.1
 
 [env:shutter-c3]
-platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -311,12 +310,10 @@ lib_deps = ${env.lib_deps}
 
 
 [env:playground]
-platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
 
 [env:playground-c3]
-platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
