--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,20 @@ include_dir = ./src
 data_dir = ./data/web
 
 [env]
-platform = espressif32@6.8.1
+# Official PlatformIO espressif32 and Arduino 2.x
+platform = espressif32@6.9.0
+#
+# Official PlatformIO espressif32 and Arduino 3.x
+# but only supports ESP32, ESP32-S2, ESP32-C3 and ESP32-S3
+#platform = espressif32@6.9.0
+#platform_packages =
+#    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.5
+#    framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-lib-builder/releases/download/idf-release_v5.1/esp32-arduino-libs-idf-release_v5.1-33fbade6.zip
+#
+# UNOFFICIAL Espressif32 and Arduino 3.x
+# should support also latest ESP32 boards (not verified)
+#platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+#
 build_src_filter = -<*> +<src/*>
 build_flags = -D CRON_USE_LOCAL_TIME -D CRON_DISABLE_YEARS -Os -D BUILD_ENV_NAME=\"$PIOENV\"
 build_unflags = -fno-exceptions
@@ -29,11 +42,10 @@ lib_deps =
     ArduinoJson@7.0.4
     thijse/ArduinoLog@1.1.1
     WebSockets@2.4.1
-    vortigont/LinkedList@1.5.0
     hideakitai/MsgPack@0.4.2
     adafruit/TINYXML@1.0.3
     ESP32Time@2.0.6
-    lovyan03/LovyanGFX@1.1.12
+    lovyan03/LovyanGFX@1.1.16
     dvarrel/ESPping@1.0.4
     jpb10/SolarCalculator@2.0.1
 lib_deps_8266 =
@@ -91,7 +103,22 @@ lib_ignore =
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+lib_deps = ${env.lib_deps}
+           RobTillaart/DHTNew@0.4.19
+           OneWire@2.3.8
+lib_ignore =
+    LovyanGFX
+
+[env:smart-sensor-s3]
+board = esp32-s3-fh4r2
+#board = esp32-s3-devkitc-1
+#board = esp32-s3-devkitm-1
+#board = lolin_s3_mini
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
+              -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21","io-typ01":"Dimmer","io-pin01":"5","io-typ02":"Dimmer","io-pin02":"6","sdht-typ":"22","sdht-pin":"8","motn-typ":"switch","motn-pin":"7"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
            RobTillaart/DHTNew@0.4.19
@@ -101,7 +128,8 @@ lib_ignore =
 
 [env:smart-sensor-s2-mini]
 board = lolin_s2_mini
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D DISABLE_UI -D BOARD_HAS_PSRAM
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D DISABLE_UI
+              -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
@@ -262,7 +290,7 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","leds-typ":"6","leds-cnt":"25","leds-spd":"0","leds-pin":"8"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10","leds-typ":"82","leds-spd":"0","leds-pin":"5","leds-cnt":"1"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
@@ -274,7 +302,7 @@ board = esp32-s3-fh4r2
 #board = lolin_s3_mini
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","leds-typ":"6","leds-cnt":"144","leds-spd":"0","leds-pin":"6"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21","leds-typ":"82","leds-spd":"0","leds-pin":"6","leds-cnt":"1"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
@@ -283,7 +311,7 @@ lib_deps = ${env.lib_deps}
 board = lolin_s2_mini
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2
               -D BOARD_HAS_PSRAM
-              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","leds-typ":"82","leds-spd":"0","leds-pin":"8","leds-cnt":"0"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
