--- a/platformio.ini
+++ b/platformio.ini
@@ -94,6 +94,7 @@ build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
+    adafruit/Adafruit TCS34725@^1.4.4
     RobTillaart/DHTNew@0.4.19
     OneWire@2.3.8
 lib_ignore =
@@ -105,9 +106,7 @@ board = esp32-c3-devkitc-02
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-lib_deps = ${env.lib_deps}
-           RobTillaart/DHTNew@0.4.19
-           OneWire@2.3.8
+lib_deps = ${env:smart-sensor.lib_deps}
 lib_ignore =
     LovyanGFX
 
@@ -120,9 +119,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21","io-typ01":"Dimmer","io-pin01":"5","io-typ02":"Dimmer","io-pin02":"6","sdht-typ":"22","sdht-pin":"8","motn-typ":"switch","motn-pin":"7"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-lib_deps = ${env.lib_deps}
-           RobTillaart/DHTNew@0.4.19
-           OneWire@2.3.8
+lib_deps = ${env:smart-sensor.lib_deps}
 lib_ignore =
     LovyanGFX
 
@@ -132,9 +129,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D DISABLE_UI
               -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-lib_deps = ${env.lib_deps}
-           RobTillaart/DHTNew@0.4.19
-           OneWire@2.3.8
+lib_deps = ${env:smart-sensor.lib_deps}
 lib_ignore =
     ESP32_BleSerial
     LovyanGFX
@@ -212,8 +207,7 @@ board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
 lib_deps = ${env.lib_deps_8266}
-    ${env.lib_deps}
-    rc-switch@2.6.4
+           ${env:rf-transceiver.lib_deps}
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
@@ -225,8 +219,7 @@ board = esp32-c3-devkitc-02
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
-lib_deps = ${env.lib_deps}
-    rc-switch@2.6.4
+lib_deps = ${env:rf-transceiver.lib_deps}
 lib_ignore =
     LovyanGFX
 
@@ -245,8 +238,7 @@ board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
 lib_deps = ${env.lib_deps_8266}
-    ${env.lib_deps}
-    crankyoldgit/IRremoteESP8266@2.8.6
+           ${env:ir-transceiver.lib_deps}
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
@@ -258,8 +250,7 @@ board = esp32-c3-devkitc-02
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
-lib_deps = ${env.lib_deps}
-           crankyoldgit/IRremoteESP8266@2.8.6
+lib_deps = ${env:ir-transceiver.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 lib_ignore =
     LovyanGFX
@@ -278,8 +269,7 @@ build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUT
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps_8266}
-    ${env.lib_deps}
-    https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+           ${env:color-light.lib_deps}
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
@@ -292,8 +282,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10","leds-typ":"82","leds-spd":"0","leds-pin":"5","leds-cnt":"1"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-lib_deps = ${env.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_deps = ${env:color-light.lib_deps}
 
 [env:color-light-s3]
 board = esp32-s3-fh4r2
@@ -304,8 +293,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21","leds-typ":"82","leds-spd":"0","leds-pin":"6","leds-cnt":"1"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-lib_deps = ${env.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_deps = ${env:color-light.lib_deps}
 
 [env:color-light-s2-mini]
 board = lolin_s2_mini
@@ -313,8 +301,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2
               -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","leds-typ":"82","leds-spd":"0","leds-pin":"8","leds-cnt":"0"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-lib_deps = ${env.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_deps = ${env:color-light.lib_deps}
 lib_ignore =
     ESP32_BleSerial
 
@@ -331,9 +318,7 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
-lib_deps = ${env.lib_deps}
-    arduino-libraries/Stepper@^1.1.3
-    madhephaestus/ESP32Servo@^1.1.1
+lib_deps = ${env:shutter.lib_deps}
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 
