--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ platform = espressif32@6.9.0
 #
 # UNOFFICIAL Espressif32 and Arduino 3.x
 # should support also latest ESP32 boards (not verified)
-#platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+#platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.07/platform-espressif32.zip
 #
 build_src_filter = -<*> +<src/*>
 build_flags = -D CRON_USE_LOCAL_TIME -D CRON_DISABLE_YEARS -Os -D BUILD_ENV_NAME=\"$PIOENV\"
@@ -96,7 +96,7 @@ build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
     adafruit/Adafruit TCS34725@^1.4.4
     RobTillaart/DHTNew@0.4.19
-    OneWire@2.3.8
+    PaulStoffregen/OneWire@2.3.8
 lib_ignore =
     LovyanGFX
 
