--- a/platformio.ini
+++ b/platformio.ini
@@ -48,6 +48,7 @@ lib_deps =
     lovyan03/LovyanGFX@1.1.16
     dvarrel/ESPping@1.0.4
     jpb10/SolarCalculator@2.0.1
+    RobTillaart/UUID@0.1.6
 lib_deps_8266 =
     vshymanskyy/Preferences@2.1.0
 
