--- a/platformio.ini
+++ b/platformio.ini
@@ -182,7 +182,21 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
+lib_deps = ${env:x10-transceiver.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_ignore =
+    LovyanGFX
+
+[env:x10-transceiver-s3]
+board = esp32-s3-fh4r2
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
+              -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
+build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
+lib_deps = ${env:x10-transceiver.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 lib_ignore =
     LovyanGFX
 
@@ -197,6 +211,7 @@ lib_ignore =
     ESP32Time
     ESP32_BleSerial
     LovyanGFX
+
 
 [env:rf-transceiver]
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
@@ -252,6 +267,18 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
+build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
+lib_deps = ${env:ir-transceiver.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_ignore =
+    LovyanGFX
+
+[env:ir-transceiver-s3]
+board = esp32-s3-fh4r2
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
+              -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
 lib_deps = ${env:ir-transceiver.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
