--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ platform = espressif32@6.9.0
 #
 # UNOFFICIAL Espressif32 and Arduino 3.x
 # should support also latest ESP32 boards (not verified)
-#platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.07/platform-espressif32.zip
+#platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.11/platform-espressif32.zip
 #
 build_src_filter = -<*> +<src/*>
 build_flags = -D CRON_USE_LOCAL_TIME -D CRON_DISABLE_YEARS -Os -D BUILD_ENV_NAME=\"$PIOENV\"
@@ -236,6 +236,16 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
+lib_deps = ${env:rf-transceiver.lib_deps}
+lib_ignore =
+    LovyanGFX
+
+[env:rf-transceiver-s3]
+board = esp32-s3-fh4r2
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
+              -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
 lib_deps = ${env:rf-transceiver.lib_deps}
 lib_ignore =
