--- a/.github/workflows/platformio.yml
+++ b/.github/workflows/platformio.yml
@@ -27,8 +27,9 @@ jobs:
           bash ./.github/post-build.sh
 
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             ./artifacts/*.zip
+          generate_release_notes: true
