--- a/platformio.ini
+++ b/platformio.ini
@@ -23,8 +23,10 @@ platform = espressif32@6.9.0
 #    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.5
 #    framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-lib-builder/releases/download/idf-release_v5.1/esp32-arduino-libs-idf-release_v5.1-33fbade6.zip
 #
-# UNOFFICIAL Espressif32 and Arduino 3.x
-# should support also latest ESP32 boards (not verified)
+# PIOARDUINO - unofficial Espressif32 and Arduino 3.x
+# should support also latest ESP32 boards (not yet verified)
+# from early testing it seems that it requires 42K of additional
+# heap memory probably due different IDF version (newer)
 #platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.11/platform-espressif32.zip
 #
 build_src_filter = -<*> +<src/*>
@@ -49,9 +51,30 @@ lib_deps =
     dvarrel/ESPping@1.0.4
     jpb10/SolarCalculator@2.0.1
     RobTillaart/UUID@0.1.6
-lib_deps_8266 =
+custom_lib_deps_8266 =
     vshymanskyy/Preferences@2.1.0
-
+# The 'custom_sdkconfig' and 'custom_component_remove'
+# are experimental options that only works with *pioarduino* (Hybrid compilation)
+custom_sdkconfig =
+    file://./sdkconfig.esp32
+custom_component_remove =
+    espressif/esp_hosted
+    espressif/esp_wifi_remote
+    espressif/esp-dsp
+    espressif/network_provisioning
+    espressif/esp-zboss-lib
+    espressif/esp-zigbee-lib
+    espressif/esp_rainmaker
+    espressif/rmaker_common
+    espressif/esp_insights
+    espressif/esp_diag_data_store
+    espressif/esp_diagnostics
+    espressif/cbor
+    espressif/qrcode
+    espressif/esp-sr
+    espressif/libsodium
+    espressif/esp-modbus
+    espressif/esp32-camera
 
 [env:default]
 build_flags = ${env.build_flags}
@@ -75,7 +98,7 @@ platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","io-typ01":"Switch","io-pin01":"14","io-typ02":"Switch","io-pin02":"27","io-typ03":"Switch","io-pin03":"27","io-typ04":"Switch","io-pin04":"27"}'
-lib_deps = ${env.lib_deps_8266}
+lib_deps = ${env.custom_lib_deps_8266}
     ${env.lib_deps}
 lib_ignore =
     ESP32Time
@@ -107,8 +130,9 @@ lib_ignore =
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"8"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+build_src_filter = ${env:smart-sensor.build_src_filter}
 lib_deps = ${env:smart-sensor.lib_deps}
 lib_ignore =
     LovyanGFX
@@ -120,8 +144,9 @@ board = esp32-s3-fh4r2
 #board = lolin_s3_mini
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21","io-typ01":"Dimmer","io-pin01":"5","io-typ02":"Dimmer","io-pin02":"6","sdht-typ":"22","sdht-pin":"8","motn-typ":"switch","motn-pin":"9"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+build_src_filter = ${env:smart-sensor.build_src_filter}
 lib_deps = ${env:smart-sensor.lib_deps}
 lib_ignore =
     LovyanGFX
@@ -131,7 +156,7 @@ board = lolin_s2_mini
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2 -D DISABLE_UI
               -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"8"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+build_src_filter = ${env:smart-sensor.build_src_filter}
 lib_deps = ${env:smart-sensor.lib_deps}
 lib_ignore =
     ESP32_BleSerial
@@ -142,8 +167,8 @@ platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","sys_bt_pin":"2","sys_sl_pin":"16","soth-typ":"ds18b20","soth-pin":"0","ligh-typ":"ldr","ligh-pin":"17"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-lib_deps = ${env.lib_deps_8266}
+build_src_filter = ${env:smart-sensor.build_src_filter}
+lib_deps = ${env.custom_lib_deps_8266}
     ${env:smart-sensor.lib_deps}
 lib_ignore =
     ESP32Time
@@ -162,7 +187,7 @@ board = esp32-s3-devkitc-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK
               -D ESP32S3_DEV -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
+build_src_filter = ${env:smart-sensor-display.build_src_filter}
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 board_build.arduino.memory_type = qio_qspi
@@ -183,6 +208,7 @@ board = esp32-c3-devkitc-02
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D BOARD_HAS_RGB_LED
+              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 lib_deps = ${env:x10-transceiver.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
@@ -194,6 +220,7 @@ board = esp32-s3-fh4r2
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D BOARD_HAS_RGB_LED
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 lib_deps = ${env:x10-transceiver.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
@@ -205,7 +232,7 @@ platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
-lib_deps = ${env.lib_deps_8266}
+lib_deps = ${env.custom_lib_deps_8266}
     ${env.lib_deps}
 lib_ignore =
     ESP32Time
@@ -223,8 +250,8 @@ lib_deps = ${env.lib_deps}
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI
-build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
-lib_deps = ${env.lib_deps_8266}
+build_src_filter = ${env:rf-transceiver.build_src_filter}
+lib_deps = ${env.custom_lib_deps_8266}
            ${env:rf-transceiver.lib_deps}
 lib_ignore =
     ESP32Time
@@ -236,7 +263,9 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
+              -D BOARD_HAS_RGB_LED
+              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
+build_src_filter = ${env:rf-transceiver.build_src_filter}
 lib_deps = ${env:rf-transceiver.lib_deps}
 lib_ignore =
     LovyanGFX
@@ -246,7 +275,8 @@ board = esp32-s3-fh4r2
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D BOARD_HAS_RGB_LED
-build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
+build_src_filter = ${env:rf-transceiver.build_src_filter}
 lib_deps = ${env:rf-transceiver.lib_deps}
 lib_ignore =
     LovyanGFX
@@ -264,8 +294,8 @@ lib_ignore =
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI
-build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
-lib_deps = ${env.lib_deps_8266}
+build_src_filter = ${env:ir-transceiver.build_src_filter}
+lib_deps = ${env.custom_lib_deps_8266}
            ${env:ir-transceiver.lib_deps}
 lib_ignore =
     ESP32Time
@@ -278,7 +308,8 @@ board = esp32-c3-devkitc-02
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D BOARD_HAS_RGB_LED
-build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
+              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
+build_src_filter = ${env:ir-transceiver.build_src_filter}
 lib_deps = ${env:ir-transceiver.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 lib_ignore =
@@ -289,8 +320,57 @@ board = esp32-s3-fh4r2
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D BOARD_HAS_RGB_LED
-build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
+build_src_filter = ${env:ir-transceiver.build_src_filter}
 lib_deps = ${env:ir-transceiver.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_ignore =
+    LovyanGFX
+
+
+[env:ir-rf-transceiver]
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
+build_src_filter = +<src> -<src/main.cpp> +<examples/ir-rf-transceiver>
+                   +<examples/ir-transceiver/api> +<examples/ir-transceiver/io>
+                   +<examples/x10-transceiver/api> +<examples/x10-transceiver/io>
+lib_deps = ${env.lib_deps}
+           crankyoldgit/IRremoteESP8266@2.8.6
+lib_ignore =
+    LovyanGFX
+
+[env:ir-rf-transceiver-d1-mini]
+platform = espressif8266@2.6.3
+board = d1_mini
+build_flags = ${env.build_flags} -D DISABLE_UI
+build_src_filter = ${env:ir-rf-transceiver.build_src_filter}
+lib_deps = ${env.custom_lib_deps_8266}
+           ${env:ir-rf-transceiver.lib_deps}
+lib_ignore =
+    ESP32Time
+    ESP32_BleSerial
+    LovyanGFX
+
+[env:ir-rf-transceiver-c3]
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
+              -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
+              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
+build_src_filter = ${env:ir-rf-transceiver.build_src_filter}
+lib_deps = ${env:ir-rf-transceiver.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_ignore =
+    LovyanGFX
+
+[env:ir-rf-transceiver-s3]
+board = esp32-s3-fh4r2
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
+              -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
+build_src_filter = ${env:ir-rf-transceiver.build_src_filter}
+lib_deps = ${env:ir-rf-transceiver.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 lib_ignore =
     LovyanGFX
@@ -307,8 +387,8 @@ platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"16","leds-typ":"6","leds-cnt":"64","leds-spd":"0","leds-pin":"8"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-lib_deps = ${env.lib_deps_8266}
+build_src_filter = ${env:color-light.build_src_filter}
+lib_deps = ${env.custom_lib_deps_8266}
            ${env:color-light.lib_deps}
 lib_ignore =
     ESP32Time
@@ -320,8 +400,9 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10","leds-typ":"82","leds-spd":"0","leds-pin":"5","leds-cnt":"1"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+build_src_filter = ${env:color-light.build_src_filter}
 lib_deps = ${env:color-light.lib_deps}
 
 [env:color-light-s3]
@@ -331,8 +412,9 @@ board = esp32-s3-fh4r2
 #board = lolin_s3_mini
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21","leds-typ":"82","leds-spd":"0","leds-pin":"6","leds-cnt":"1"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+build_src_filter = ${env:color-light.build_src_filter}
 lib_deps = ${env:color-light.lib_deps}
 
 [env:color-light-s2-mini]
@@ -340,7 +422,7 @@ board = lolin_s2_mini
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S2
               -D BOARD_HAS_PSRAM
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"15","leds-typ":"82","leds-spd":"0","leds-pin":"8","leds-cnt":"0"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+build_src_filter = ${env:color-light.build_src_filter}
 lib_deps = ${env:color-light.lib_deps}
 lib_ignore =
     ESP32_BleSerial
@@ -357,7 +439,7 @@ lib_deps = ${env.lib_deps}
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
+build_src_filter = ${env:shutter.build_src_filter}
 lib_deps = ${env:shutter.lib_deps}
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
@@ -370,4 +452,4 @@ build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
+build_src_filter = ${env:playground.build_src_filter}
