--- a/platformio.ini
+++ b/platformio.ini
@@ -244,7 +244,7 @@ lib_ignore =
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
 lib_deps = ${env.lib_deps}
-    rc-switch@2.6.4
+           lib/rc-switch
 
 [env:rf-transceiver-d1-mini]
 platform = espressif8266@2.6.3
@@ -267,6 +267,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
 build_src_filter = ${env:rf-transceiver.build_src_filter}
 lib_deps = ${env:rf-transceiver.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 lib_ignore =
     LovyanGFX
 
@@ -278,6 +279,7 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
 build_src_filter = ${env:rf-transceiver.build_src_filter}
 lib_deps = ${env:rf-transceiver.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 lib_ignore =
     LovyanGFX
 
@@ -332,9 +334,11 @@ lib_ignore =
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-rf-transceiver>
                    +<examples/ir-transceiver/api> +<examples/ir-transceiver/io>
+                   +<examples/rf-transceiver/api> +<examples/rf-transceiver/io>
                    +<examples/x10-transceiver/api> +<examples/x10-transceiver/io>
 lib_deps = ${env.lib_deps}
            crankyoldgit/IRremoteESP8266@2.8.6
+           lib/rc-switch
 lib_ignore =
     LovyanGFX
 
@@ -442,6 +446,19 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D
 build_src_filter = ${env:shutter.build_src_filter}
 lib_deps = ${env:shutter.lib_deps}
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+
+[env:shutter-s3]
+board = esp32-s3-fh4r2
+#board = esp32-s3-devkitc-1
+#board = esp32-s3-devkitm-1
+#board = lolin_s3_mini
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D DISABLE_UI
+              -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
+              -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
+build_src_filter = ${env:shutter.build_src_filter}
+lib_deps = ${env:shutter.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 
 [env:playground]
