--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ data_dir = ./data/web
 
 [env]
 # Official PlatformIO espressif32 and Arduino 2.x
-platform = espressif32@6.9.0
+platform = espressif32@6.10.0
 #
 # Official PlatformIO espressif32 and Arduino 3.x
 # but only supports ESP32, ESP32-S2, ESP32-C3 and ESP32-S3
@@ -30,7 +30,7 @@ platform = espressif32@6.9.0
 #platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.11/platform-espressif32.zip
 #
 build_src_filter = -<*> +<src/*>
-build_flags = -D CRON_USE_LOCAL_TIME -D CRON_DISABLE_YEARS -Os -D BUILD_ENV_NAME=\"$PIOENV\"
+build_flags = -D CRON_USE_LOCAL_TIME -D CRON_DISABLE_YEARS -Os -D BUILD_ENV_NAME=\"$PIOENV\" -D BUILD_PLATFORM=\"${this.platform}\"
 build_unflags = -fno-exceptions
 framework = arduino
 board = esp32dev
@@ -55,26 +55,26 @@ custom_lib_deps_8266 =
     vshymanskyy/Preferences@2.1.0
 # The 'custom_sdkconfig' and 'custom_component_remove'
 # are experimental options that only works with *pioarduino* (Hybrid compilation)
-custom_sdkconfig =
-    file://./sdkconfig.esp32
-custom_component_remove =
-    espressif/esp_hosted
-    espressif/esp_wifi_remote
-    espressif/esp-dsp
-    espressif/network_provisioning
-    espressif/esp-zboss-lib
-    espressif/esp-zigbee-lib
-    espressif/esp_rainmaker
-    espressif/rmaker_common
-    espressif/esp_insights
-    espressif/esp_diag_data_store
-    espressif/esp_diagnostics
-    espressif/cbor
-    espressif/qrcode
-    espressif/esp-sr
-    espressif/libsodium
-    espressif/esp-modbus
-    espressif/esp32-camera
+;custom_sdkconfig =
+;    file://./sdkconfig.esp32
+;custom_component_remove =
+;    espressif/esp_hosted
+;    espressif/esp_wifi_remote
+;    espressif/esp-dsp
+;    espressif/network_provisioning
+;    espressif/esp-zboss-lib
+;    espressif/esp-zigbee-lib
+;    espressif/esp_rainmaker
+;    espressif/rmaker_common
+;    espressif/esp_insights
+;    espressif/esp_diag_data_store
+;    espressif/esp_diagnostics
+;    espressif/cbor
+;    espressif/qrcode
+;    espressif/esp-sr
+;    espressif/libsodium
+;    espressif/esp-modbus
+;    espressif/esp32-camera
 
 [env:default]
 build_flags = ${env.build_flags}
@@ -442,7 +442,10 @@ lib_deps = ${env.lib_deps}
 [env:shutter-c3]
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI
+              -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D BOARD_HAS_RGB_LED
+              -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
 build_src_filter = ${env:shutter.build_src_filter}
 lib_deps = ${env:shutter.lib_deps}
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
