--- a/platformio.ini
+++ b/platformio.ini
@@ -31,6 +31,7 @@ platform = espressif32@6.10.0
 #
 build_src_filter = -<*> +<src/*>
 build_flags = -D CRON_USE_LOCAL_TIME -D CRON_DISABLE_YEARS -Os -D BUILD_ENV_NAME=\"$PIOENV\" -D BUILD_PLATFORM=\"${this.platform}\"
+build_type = release
 build_unflags = -fno-exceptions
 framework = arduino
 board = esp32dev
@@ -120,7 +121,7 @@ lib_ignore =
     ESP32_BleSerial
 
 [env:sonoff-dualr3]
-build_flags = ${env.build_flags}
+build_flags = ${env.build_flags} -mfix-esp32-psram-cache-issue
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"13","io-typ01":"Switch","io-pin01":"14","io-typ02":"Switch","io-pin02":"27","io-typ03":"Switch","io-pin03":"27","io-typ04":"Switch","io-pin04":"27"}'
 
 
@@ -135,8 +136,36 @@ lib_deps = ${env.lib_deps}
     adafruit/Adafruit TCS34725@^1.4.4
     RobTillaart/DHTNew@0.4.19
     PaulStoffregen/OneWire@2.3.8
-#    https://github.com/PaulStoffregen/OneWire.git
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+
+# ESP32-CAM
+[env:smart-sensor-psram]
+build_flags = ${env.build_flags} -I examples -I src
+              -D ESP_CAMERA_SUPPORTED -D DISABLE_BLUETOOTH
+              -D BOARD_HAS_PSRAM -mfix-esp32-psram-cache-issue
+              -D DEFAULT_CONFIG='{"sys-rb-n":"-1","sys-sl-n":"33"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+lib_deps = ${env.lib_deps}
+           adafruit/Adafruit TCS34725@^1.4.4
+           RobTillaart/DHTNew@0.4.19
+           PaulStoffregen/OneWire@2.3.8
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+
+# ESP32-S3-CAM
+[env:smart-sensor-s3-n16r8v]
+board = esp32-s3-devkitc-1-n16r8v
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
+              -D ESP_CAMERA_SUPPORTED -D DISABLE_BLUETOOTH
+              -D ARDUINO_USB_CDC_ON_BOOT=0
+              -D BOARD_HAS_PSRAM
+              -D BOARD_HAS_RGB_LED
+              -D DEFAULT_CONFIG='{"sys-rb-n":"-1","sys-sl-n":"2","stld-typ":"82","stld-spd":"0","stld-pin":"48", "camr-typ":"esps3-cam"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+lib_deps = ${env.lib_deps}
+           adafruit/Adafruit TCS34725@^1.4.4
+           RobTillaart/DHTNew@0.4.19
+           PaulStoffregen/OneWire@2.3.8
+           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 [env:smart-sensor-c3]
 board = esp32-c3-devkitc-02
