--- a/platformio.ini
+++ b/platformio.ini
@@ -496,25 +496,25 @@ lib_ignore =
     ESP32_BleSerial
 
 
-[env:shutter]
+[env:smart-motor]
 build_flags = ${env.build_flags} -I examples -I src
-build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-motor>
 lib_deps = ${env.lib_deps}
     arduino-libraries/Stepper@^1.1.3
     madhephaestus/ESP32Servo@^1.1.1
 
-[env:shutter-c3]
+[env:smart-motor-c3]
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3
               -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D BOARD_HAS_RGB_LED
               -D DEFAULT_CONFIG='{"sys-rb-n":"9","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"10"}'
-build_src_filter = ${env:shutter.build_src_filter}
-lib_deps = ${env:shutter.lib_deps}
+build_src_filter = ${env:smart-motor.build_src_filter}
+lib_deps = ${env:smart-motor.lib_deps}
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
-[env:shutter-s3]
+[env:smart-motor-s3]
 board = esp32-s3-fh4r2
 #board = esp32-s3-devkitc-1
 #board = esp32-s3-devkitm-1
@@ -523,17 +523,17 @@ build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D BOARD_HAS_RGB_LED
               -D DEFAULT_CONFIG='{"sys-rb-n":"0","sys-sl-n":"-1","stld-typ":"82","stld-spd":"0","stld-pin":"21"}'
-build_src_filter = ${env:shutter.build_src_filter}
-lib_deps = ${env:shutter.lib_deps}
+build_src_filter = ${env:smart-motor.build_src_filter}
+lib_deps = ${env:smart-motor.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
-[env:shutter-s3-nano]
+[env:smart-motor-s3-nano]
 board = arduino_nano_esp32
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3
               -D BOARD_HAS_PSRAM -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
               -D DEFAULT_CONFIG='{"sys-rb-n":"-1","sys-sl-n":"13","stld-typ":"82","stld-spd":"0","stld-pin":"-1"}'
-build_src_filter = ${env:shutter.build_src_filter}
-lib_deps = ${env:shutter.lib_deps}
+build_src_filter = ${env:smart-motor.build_src_filter}
+lib_deps = ${env:smart-motor.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 
